--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "bootstrap-icons": "^1.10.2",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "socket.io": "^4.5.3"
   },
   "description": ""
 }
