--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "aws-sdk": "^2.1255.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
+    "bootstrap-select": "^1.13.18",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
