--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "request": "^2.88.2",
     "socket.io": "^4.5.3"
   },
   "description": ""
