--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "request": "^2.88.2",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "stemmer": "==1.0.5"
   },
   "description": ""
 }
